<resources>
    <string name="app_name">MovieZ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Has olvidado la contraseña?</string>
    <string name="don_t_have_an_account">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="or_sign_up_with">o accede rápidamente con</string>
    <string name="log_in">Entra</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="escoge_hasta_3_generos_de_preferencia">Escoge hasta 3 géneros de preferencia:</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="seguidores">Seguidores</string>
    <string name="_0">0</string>
    <string name="estad_sticas_usuario">Estadísticas Usuario</string>
    <string name="has_visto">Has visto</string>
    <string name="pel_culas">Películas</string>
    <string name="quieres_ver">Quieres ver</string>
    <string name="favoritas">Favoritas</string>
    <string name="ltimas_pel_culas_vistas">Últimas películas vistas:</string>
    <string name="pel_culas_favoritas">Películas favoritas:</string>
    <string name="pass_recover">Introduce tu correo para recuperar tu contraseña:</string>
    <string name="pass_recover_button">Recuperar contraseña</string>
    <string name="profile_photo">Foto de perfil</string>
    <string name="release">Estreno</string>
    <string name="director">Director</string>
    <string name="casting">Casting</string>
    <string name="buy">Comprar</string>
    <string name="info">Información</string>
    <string name="commentary">Comentarios</string>
    <string name="related_movies">Películas similares:</string>
    <string name="search_for_users">Buscar usuarios</string>
    <string name="search_for_movies">Buscar películas</string>
    <string name="friend_act">Actividad de tus amigos</string>
    <string name="para_ti">Para ti</string>
    <string name="cines">Nuestros cines</string>
    <string name="scan_something">Scan something...</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cr_ditos">Créditos</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cambiar_nombre_de_perfil">Cambiar nombre</string>
    <string name="actualizar_nombre_de_perfil">Actualizar nombre de perfil</string>
    <string name="nuevo_nombre">Nuevo Nombre</string>
    <string name="confirmar_nombre">Confirmar Nombre</string>
    <string name="confirma">Confirma</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="actualizar_contrase_a">Actualizar contraseña</string>
    <string name="buy_ticket">Comprar ticket</string>
    <string name="new_comment">Añade un comentario</string>
    <string name="add_comment_button">Añadir comentario...</string>
    <string name="comment_hint">Comentario...</string>
    <string name="end_buy">Finalizar compra</string>
    <string name="go_tickets">Ir a tickets</string>
    <string name="buy_done">Tu compra se ha realizado correctamente</string>
    <string name="screen">Pantalla</string>
    <string name="available">Disponible</string>
    <string name="busy">Reservado</string>
    <string name="selected">Seleccionado</string>
    <string name="qr_show">Mostrar QR</string>
    <string name="qr_hide">Esconder QR</string>
    <string name="friends_activity">Actividad amigos</string>
    <string name="developer_1">Sergio Domínguez</string>
    <string name="developer_2">Raul Grande</string>
    <string name="developer_3">Jordi Planas</string>
    <string name="guion">-</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="mrey_cn">mrey∞cn</string>
    <string name="project_developers">Project Developers</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="the_batman">The Batman</string>
    <string name="informaci_n_de_la_pel_cula">Información de la película</string>
    <string name="a_ade_un_comentario">Añade un comentario...</string>
    <string name="cartelera">Cartelera</string>
    <string name="pr_ximamente_en_cines">Próximamente en cines</string>
    <string name="_0_0">0.0</string>
    <string name="__5_0">5.0</string>
    <string name="_5_0">/5.0</string>
    <string name="spoiler">Spoiler</string>
    <string name="continuar">Continuar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="pel_culas_que_quieres_ver">Películas que quieres ver:</string>
    <string name="sum">+</string>
    <string name="total">Total:</string>
    <string name="_10_x">(10€x</string>
    <string name="_2">2</string>
    <string name="parentesis">)</string>
    <string name="_20">20</string>
    <string name="euro">€</string>
    <string name="no_tienes_tickets">No tienes tickets.</string>
    <string name="g_nero">Género</string>
    <string name="movie_title">Movie title</string>
    <string name="arenas_cinesa">Arenas Cinesa</string>
    <string name="sala">SALA</string>
    <string name="fila">FILA</string>
    <string name="asiento">ASIENTO</string>
    <string name="hora">HORA</string>
    <string name="d_a">DÍA</string>
    <string name="nombre_peli">Nombre peli</string>
    <string name="nombre_cine">Nombre cine</string>
    <string name="sala2">Sala</string>
    <string name="fila2">Fila</string>
    <string name="asiento2">Asiento</string>
    <string name="_00">00</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="FechaNoDisponible">Fecha no disponible.</string>
    <string name="Comentarios">Comentarios</string>
    <string name="NoHayComentarios">No hay comentarios</string>
    <string name="Seguir">Seguir</string>
    <string name="EditarPerfil">Editar perfil</string>
    <string name="DejarDeSeguir">Dejar de seguir</string>
    <string name="No_Peliculas">No hay películas</string>
    <string name="No_Te_Siguen">Nadie te sigue 😔</string>
    <string name="No_Sigues">Este usuario no sigue a nadie</string>
    <string name="No_Seguidores">Nadie sigue a este usuario 😔</string>
    <string-array name="movie_status">
        <item>Vista</item>
        <item>Ver más tarde</item>
    </string-array>
</resources>