<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Fragments.TicketListBoughtFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/backButton2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:rotation="180"
                    app:srcCompat="@drawable/ic_arrow" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi"
                    android:gravity="center"
                    android:text="@string/end_buy"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ticketRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:layout_below="@id/textView12"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/priceCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ticketRecycler"
                    app:cardBackgroundColor="?attr/colorSecondary"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="0dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:cardBackgroundColor="?attr/colorPrimaryVariant"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginBottom="15dp"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/total"
                                android:textColor="?attr/colorOnSecondary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="160dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/_10_x"
                                android:textColor="?attr/colorOnSecondary" />

                            <TextView
                                android:id="@+id/numberTicketsText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/_2"
                                android:textColor="?attr/colorOnSecondary" />

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/parentesis"
                                android:textColor="?attr/colorOnSecondary" />

                            <TextView
                                android:id="@+id/totalPriceTickets"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="12.5dp"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/_20"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView27"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12.5dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/satoshi"
                                android:text="@string/euro"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@id/priceCard"
                    android:layout_marginTop="34dp"
                    android:backgroundTint="?attr/colorSecondary"
                    android:fontFamily="@font/satoshi"
                    android:text="@string/buy"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:cornerRadius="14dp"
                    android:layout_marginBottom="50dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>